[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uuid_extractor"
version = "0.1.0"
authors = [
  { name="Author Name", email="author@example.com" },
]
description = "A package to extract UUIDs from APKs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "tqdm",
    "DrissionPage"
]

[project.urls]
"Homepage" = "https://github.com/mohakvni/uuid_extractor"
"Bug Tracker" = "https://github.com/mohakvni/uuid_extractor/issues"

[project.scripts]
extract_uuids = "uuid_extractor:extract_uuids_from_apks"

